# inzynierka

./: .gitignore  README.md
src/: capturer.py  classifier.py  connection_splitter.py  data_builder.py  dataset.py  graph_builder.py  graph_drawer.ipynb  graph_drawer.py  graph_stats.ipynb  graph_stats.py  grouper.py  knowledge_classifier.py  label_graph.ipynb  model.pt  model1-gcn-best.pth  model1-gcn2-best.pth  model2-best.pth  packet_list_model.pt  playground.ipynb  requirements.txt  size_delay_model.pt
src/App/: configure_debug_windows.bat  configure_release_windows.bat
src/App/src/: App.cpp  App.h  CMakeLists.txt  Capture.cpp  Capture.h  Classifier.cpp  Classifier.h  Connection.cpp  Connection.h  ConnectionContent.cpp  ConnectionContent.h  Dataset.cpp  Dataset.h  Graph.cpp  Graph.h  Grouper.cpp  Grouper.h  Splitter.cpp  Splitter.h  Utilities.cpp  Utilities.h  WebSocketApp.cpp  WebSocketApp.h  main.cpp
src/GUI/: GUI.html
src/PcapParser/: PcapParser.sln
src/PcapParser/PcapParser/: Connection.cpp  Connection.h  Defines.h  Graph.cpp  Graph.h  Grouper.cpp  Grouper.h  PcapParser.vcxproj  PcapParser.vcxproj.filters  Splitter.cpp  Splitter.h  Utilities.cpp  Utilities.h  graphs.csv  main.cpp
